<resources>
    <string name="app_name">FunBox</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">다음</string>
    <string name="modify">수정</string>
    <string name="name_text">이름</string>
    <string name="no_next">X</string>
    <string name="submit">완료</string>
    <string name="withdrawal">회원 탈퇴</string>
    <string name="answer_submit">입력</string>
    <string name="nickname_setting_title">닉네임을 설정해주세요</string>
    <string name="profile_setting_title">프로필을 설정해주세요</string>
    <string name="description">매뉴</string>
    <string name="fragment_title_label">타이틀 화면</string>
    <string name="fragment_nickname_label">닉네임 입력</string>
    <string name="fragment_profile_label">프로필 설정</string>
    <string name="fragment_wait_label">퀴즈 게임 대기</string>
    <string name="fragment_quiz_label">퀴즈 게임</string>
    <string name="network_error_message">네트워크에 문제가 있습니다.</string>
    <string name="permission_message_toast">권한 허용이 필요합니다.</string>
    <string name="social_login_info_naver_client_name">네이버 아이디 로그인</string>
    <string name="social_login_info_naver_success">NAVER 로그인 성공</string>
    <string name="game_question_card_title">질문 카드</string>
    <string name="game_to_be_determined">To Be Continued…</string>
    <string name="user_id_wait">유저 아이디</string>
    <string name="side_id_wait">상대 유저 아이디</string>
    <string name="msg_wait">대기중…</string>
    <string name="finish_wait">게임 시작</string>
    <string name="msg_question_quiz">상대방과 만나 질문해주세요!</string>
    <string name="example_question_quiz">저의 MBTI는 뭘까요?</string>
    <string name="confirm">확인</string>
    <string name="answer_correct">네</string>
    <string name="answer_wrong">아니오</string>
    <string name="answer_check">이 답이 맞나요?</string>
    <string name="error_network_alert">오류!</string>
    <string name="connect_error_network_alert">상대방과 연결 끊김</string>
    <string name="answer_example">ISFJ</string>
    <string name="score_board_title">점수창</string>
    <string name="score">2</string>
    <string name="colon">:</string>
    <string name="msg_select_picture">사진을 선택해주세요!</string>
    <string name="nickname_setting">닉네임 변경</string>
    <string name="profile_setting">프로필 설정</string>
    <string name="withdraw_setting">회원 탈퇴하기</string>
    <string name="tv_withdraw_setting">정말로 탈퇴하시겠습니까?</string>
    <string name="game_apply_message">게임 신청 도착</string>
    <string name="finish_quiz_btn_text">게임 종료</string>
    <string name="not_finish_quiz_btn_text">계속하기</string>
    <string name="finish_quiz_message">게임을 종료하시겠습니까?</string>
    <string name="finish_quiz_toast_message">뒤로 가기 버튼을 한 번 더 클릭하시면 게임을 종료합니다.</string>
    <string name="gps_on_toast_message">GPS가 꺼져 있습니다.</string>
    <string name="location_permission_message">위치 권한을 허용해주세요.</string>

    <string name="iv_main_logo_description">FunBox 로고</string>
    <string name="btn_main_naver_login_description">NAVER 소셜 로그인 버튼</string>
    <string name="btn_add_profile_description">프로필 추가 버튼</string>
    <string name="btn_back_game_select_description">게임 선택 화면의 백 버튼</string>
    <string name="user_wait_description">유저 대기 UI</string>
    <string name="side_wait_description">상대 유저 대기 UI</string>
    <string name="user_profile_wait_description">유저 프로필 사진</string>
    <string name="side_profile_wait_description">상대 유저 프로필 사진</string>
    <string name="profile_setting_description">환경 설정의 프로필 사진</string>
    <string name="loading_message">상대방이 답변을 확인하는 중입니다.</string>
    <string name="send">send</string>
    <string name="other_playing">상대방이 이미 다른 게임중에 있습니다.</string>
    <string name="not_yet">미구현 기능 입니다.</string>
</resources>