<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title_nav_graph"
    app:startDestination="@id/NicknameFragment">

    <fragment
        android:id="@+id/TitleFragment"
        android:name="com.example.funbox.ui.login.TitleFragment"
        android:label="@string/fragment_title_label"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_TitleFragment_to_NicknameFragment"
            app:destination="@id/NicknameFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/NicknameFragment"
        android:name="com.example.funbox.ui.login.NicknameFragment"
        android:label="@string/fragment_nickname_label"
        tools:layout="@layout/fragment_nickname">
        <action
            android:id="@+id/action_NicknameFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/ProfileFragment"
        android:name="com.example.funbox.ui.login.ProfileFragment"
        android:label="@string/fragment_profile_label"
        tools:layout="@layout/fragment_profile">
    </fragment>

</navigation>