<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.funbox.presentation.game.quiz.QuizViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_rectangle"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:context=".presentation.game.quiz.AnswerCheckFragment">

        <TextView
            android:id="@+id/tv_title_score_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/score_board_title"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/tv_user_id_score_board"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_user_id_score_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/user_id_wait"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/tv_side_id_score_board"
            app:layout_constraintEnd_toStartOf="@id/tv_user_score_score_board"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_score_board" />

        <TextView
            android:id="@+id/tv_user_score_score_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/score"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_user_id_score_board"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_user_id_score_board"
            app:layout_constraintTop_toTopOf="@id/tv_user_id_score_board" />

        <TextView
            android:id="@+id/tv_side_id_score_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/side_id_wait"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/btn_confirm_score_board"
            app:layout_constraintEnd_toStartOf="@id/tv_side_score_score_board"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_id_score_board" />

        <TextView
            android:id="@+id/tv_side_score_score_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/score"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_side_id_score_board"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_side_id_score_board"
            app:layout_constraintTop_toTopOf="@id/tv_side_id_score_board" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_score_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_green_rectangle"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>