<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.rpg.funbox.presentation.setting.SettingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <ImageView
            android:id="@+id/iv_profile_setting"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/profile_setting_description"
            android:scaleType="fitCenter"
            android:src="@drawable/group_1940"
            app:imageUrl="@{vm.profileUri}"
            app:layout_constraintBottom_toTopOf="@id/tv_nickname_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nickname_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{vm.user.userName}"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_nickname_setting"
            app:layout_constraintEnd_toEndOf="@id/iv_profile_setting"
            app:layout_constraintStart_toStartOf="@id/iv_profile_setting"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_setting" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_nickname_setting"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg_green_rectangle"
            android:elevation="1000dp"
            android:onClick="@{() -> vm.setUserName()}"
            android:text="@string/nickname_setting"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_profile_setting"
            app:layout_constraintEnd_toEndOf="@id/iv_profile_setting"
            app:layout_constraintStart_toStartOf="@id/iv_profile_setting"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname_setting" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_profile_setting"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_green_rectangle"
            android:elevation="1000dp"
            android:onClick="@{() -> vm.setUserProfile()}"
            android:text="@string/profile_setting"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/iv_profile_setting"
            app:layout_constraintStart_toStartOf="@id/iv_profile_setting"
            app:layout_constraintTop_toBottomOf="@+id/btn_nickname_setting" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_withdraw_setting"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/bg_red_rectangle"
            android:elevation="1000dp"
            android:onClick="@{() -> vm.draw()}"
            android:text="@string/withdraw_setting"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>